Fix spacing issues

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -59,13 +59,35 @@ main.main-sidebar {
   gap: 1em;
 }
 
+/* Markdown Preview Styles */
+.highlight pre {
+  padding: var(--pico-spacing);
+}
+
 @media (max-width: 576px) {
   .hide-at-xs {
     display: none;
   }
+
+  nav ul li {
+    padding: var(--pico-nav-element-spacing-vertical) 0.25em;
+  }
+
+  .container {
+    padding: 0 0.5rem;
+  }
+
+  article {
+    padding: 1rem 0.5rem;
+  }
+
+  /* Markdown Preview Styles */
+  .highlight pre {
+    padding: 0.5rem;
+  }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1023px) {
   .hide-at-s {
     display: none;
   }
@@ -79,16 +101,9 @@ span[role="group"] {
   width: auto;
 }
 
-/* Tighter margins in the navbar when really small */
-@media (max-width: 400px) {
-  nav ul li {
-    padding: var(--pico-nav-element-spacing-vertical) 0.25em;
-  }
-}
-
-/* Prevent going smaller than 320px */
+/* Prevent going smaller than 360px */
 body {
-  min-width: 320px;
+  min-width: 360px;
 }
 
 /* More spacing between articles */
@@ -135,5 +150,4 @@ article {
 /* Markdown Preview Styles */
 .highlight pre {
   background-color: #2e3440;
-  padding: 1em;
 }
